# gztprocessor

./: .gitignore  README.md  csv_writer.py  database.py  db.py  gazette_processor.py  main.py  processor.py  pyproject.toml  readme.md  schema.sql  setup.py  state_manager.py  utils.py
database_handlers/: mindep_database_handler.py  person_database_handler.py
db_connections/: db_person.py
gazette_processors/: mindep_gazette_processor.py  person_gazette_processor.py
gztp-frontend/: package-lock.json  package.json
gztp-frontend/src/: AddGazette.jsx  App.jsx  InitialTransactionPreview.jsx  OrgAmendmentPreview.jsx  OrgInitialPreview.jsx  OrgState.jsx  OrgTransactionPreview.jsx  Person.jsx  PersonPreview.jsx  PersonState.jsx  StateTable.jsx  TransactionPreview.jsx  main.jsx
gztp-frontend/src/shared/: api.js  (+6 more)
gztprocessor/: csv_writer.py
gztprocessor/database_handlers/: mindep_database_handler.py  transaction_database_handler.py
gztprocessor/gazette_processors/: mindep_gazette_processor.py  person_gazette_processor.py
gztprocessor/schemas/: transaction_schema.sql
input/: gazette_2022-09-16.json  gazette_2022-10-05.json
request_body/: first_amendment.json  initial_tabular.json  second_amendment.json
routes/: general_router.py  mindep_router.py  person_router.py  state_router.py  transaction_router.py
schemas/: mindep_schema.sql  person_schema.sql
state/: state_2022-07-22.json  state_2022-09-16.json  state_2022-10-08.json  state_2025-06-30.json  state_2025-07-01.json
state_managers/: mindep_state_manager.py  person_state_manager.py  state_manager.py
(+9 files in other folders)
